# mp-rs

./: .gitignore  Cargo.toml  Dockerfile  README.md
.github/: dependabot.yml
.github/workflows/: dependabot-auto-merge.yml  docker.yml  rust.yml
src/: generator.rs  main.rs  routes.rs
templates/: index.html
