[package]
name = "mp-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
askama = { version = "0.12.1", features = ["with-axum"] }
askama_axum = "0.4.0"
axum = "0.8.1"
clap = { version = "4.5.26", features = ["derive"] }
mime_guess = "2.0.5"
rand = "0.8.5"
rust-embed = "8.5.0"
tokio = { version = "1.42.0", features = ["full"] }
