[package]
name = "mp-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
askama = { version = "0.12.1", features = ["with-axum"] }
askama-derive-axum = "0.1.2"
askama_axum = "0.4.0"
axum = "0.8.1"
axum-core = "0.5.0"
clap = { version = "4.5.31", features = ["derive"] }
http = "1.2.0"
mime_guess = "2.0.5"
rand = "0.9.0"
rust-embed = "8.6.0"
tokio = { version = "1.43.0", features = ["full"] }