[package]
name = "mp-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
askama = { version = "0.12.1", features = ["with-axum"] }
askama-derive-axum = "0.1.2"
askama_axum = "0.5.0"
axum = "0.8.3"
axum-core = "0.5.2"
clap = { version = "4.5.37", features = ["derive"] }
http = "1.3.1"
mime_guess = "2.0.5"
rand = "0.9.1"
rust-embed = "8.7.0"
tokio = { version = "1.44.2", features = ["full"] }